# zephyr

arch/riscv/: Kconfig
arch/riscv/core/: fatal.c  mmu.c  test_mmu.c
arch/riscv/include/: mmu.h  riscv_mmu.h
samples/hello_world/: prj.conf
samples/hello_world/src/: main.c
samples/subsys/testsuite/mmu_test/: CMakeLists.txt  prj.conf
samples/subsys/testsuite/mmu_test/src/: main.c
